--- a/report/main.tex
+++ b/report/main.tex
@@ -54,7 +54,6 @@ In this task, we define the input and output linguistic variables for our fuzzy 
 For our fuzzy phishing detection system, we have carefully selected five input linguistic variables that capture key characteristics of websites commonly exploited in phishing attacks. Each variable represents a different aspect of website legitimacy, from structural elements to reputation indicators. The variables have been chosen to provide complementary signals while maintaining interpretability. We specifically selected non-binary features because binary features cannot be effectively represented using triangular or trapezoidal membership functions.
 
 \subsubsection{Ratio of Null Hyperlinks}
-
 The variable f60 measures the percentage of non-functional or empty links within a webpage. As identified in \cite{Hannousse2020-eq}, this feature is particularly significant for phishing detection as it reflects both the structural integrity and maintenance quality of a website. Legitimate websites typically maintain their hyperlinks carefully, while phishing sites often contain numerous broken or placeholder links due to hasty creation or poor maintenance. The range spans from 0 to 100 percent and is characterized by three linguistic terms with trapezoidal membership functions:
 
 \begin{table}[H]
@@ -63,11 +62,11 @@ The variable f60 measures the percentage of non-functional or empty links within
 \hline
 \textbf{Linguistic Term} & \textbf{Range} & \textbf{Argumentation} \\
 \hline
-Low & [0, 0, 10, 25] & Typical of legitimate websites with properly maintained links. A low ratio of null hyperlinks suggests that the website is well-maintained and regularly updated, reducing the likelihood of it being a phishing site. \\
+Low & [0, 0, 15, 25] & Typical of legitimate websites with properly maintained links. A low ratio of null hyperlinks suggests that the website is well-maintained and regularly updated, reducing the likelihood of it being a phishing site. \\
 \hline
-Moderate & [15, 25, 35, 50] & Indicates potential suspicious activity. A moderate ratio of null hyperlinks may suggest that the website has some issues with link maintenance, which could be a sign of a less reputable site or one that is not regularly updated. \\
+Moderate & [15, 25, 35, 45] & Indicates potential suspicious activity. A moderate ratio of null hyperlinks may suggest that the website has some issues with link maintenance, which could be a sign of a less reputable site or one that is not regularly updated. \\
 \hline
-High & [45, 55, 100, 100] & Strong indicator of a phishing webpage. A high ratio of null hyperlinks is a red flag, as it suggests that the website may have been hastily created with little regard for link validity, a common trait of phishing sites. \\
+High & [35, 45, 100, 100] & Strong indicator of a phishing webpage. A high ratio of null hyperlinks is a red flag, as it suggests that the website may have been hastily created with little regard for link validity, a common trait of phishing sites. \\
 \hline
 \end{tabularx}
 \caption{Linguistic Terms for Ratio of Null Hyperlinks}
@@ -77,29 +76,25 @@ High & [45, 55, 100, 100] & Strong indicator of a phishing webpage. A high ratio
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
-    % Axis
-    \draw[->] (0,0) -- (10,0) node[right] {Null Hyperlinks (\%)};
-    \draw[->] (0,0) -- (0,3) node[above] {Membership Degree};
-
-    % Low
-    \draw[thick] (0,2) -- (2,2) -- (3.75,0);
-    \node at (1,2.2) {Low};
-
-    % Moderate
-    \draw[thick] (1.5,0) -- (3.75,2) -- (5,2) -- (6.25,0);
-    \node at (4.375,2.2) {Moderate};
-
-    % High
-    \draw[thick] (4.5,0) -- (5.5,2) -- (10,2) -- (10,0);
-    \node at (7.5,2.2) {High};
-
-    % Labels
-    \node[below] at (0,0) {0};
-    \node[below] at (2,0) {10};
-    \node[below] at (3.75,0) {25};
-    \node[below] at (5,0) {35};
-    \node[below] at (6.25,0) {50};
-    \node[below] at (10,0) {100};
+% Axis
+\draw[->] (0,0) -- (10,0) node[right] {Null Hyperlinks (\%)};
+\draw[->] (0,0) -- (0,3) node[above] {Membership Degree};
+% Low
+\draw[thick] (0,2) -- (1.5,2) -- (2.5,0);
+\node at (1,2.2) {Low};
+% Moderate
+\draw[thick] (1.5,0) -- (2.5,2) -- (3.5,2) -- (4.5,0);
+\node at (3,2.2) {Moderate};
+% High
+\draw[thick] (3.5,0) -- (4.5,2) -- (10,2) -- (10,0);
+\node at (7,2.2) {High};
+% Labels
+\node[below] at (0,0) {0};
+\node[below] at (1.5,0) {15};
+\node[below] at (2.5,0) {25};
+\node[below] at (3.5,0) {35};
+\node[below] at (4.5,0) {45};
+\node[below] at (10,0) {100};
 \end{tikzpicture}
 \caption{Membership Functions for Ratio of Null Hyperlinks}
 \label{fig:membership_null_hyperlinks}
@@ -109,7 +104,6 @@ High & [45, 55, 100, 100] & Strong indicator of a phishing webpage. A high ratio
 
 The variable f61 quantifies external stylesheet references in a webpage. This feature is particularly relevant for phishing detection as legitimate websites typically maintain consistent styling through multiple CSS files, following modern web development practices. Phishing websites, in contrast, often minimize their styling implementation to quickly replicate legitimate pages with minimal effort. Additionally, as noted in \cite{10049452}, the number of external stylesheets can indicate the level of sophistication and development effort invested in the website, where an unusually low number might signal a hastily created phishing page. The range spans from 0 to 20 files, with three linguistic terms:
 
-
 \begin{table}[H]
 \centering
 \begin{tabularx}{\textwidth}{|>{\hsize=0.7\hsize}X|>{\hsize=0.6\hsize}X|>{\hsize=1.7\hsize}X|}
@@ -118,46 +112,37 @@ The variable f61 quantifies external stylesheet references in a webpage. This fe
 \hline
 Very Few & [0, 0, 1, 2] & Common in phishing sites that employ minimal styling to create basic replicas of legitimate pages. A single CSS file often indicates oversimplified implementation that warrants scrutiny. \\
 \hline
-Moderate & [1, 2, 3, 4] & Represents balanced styling implementation. This range aligns with modern web development practices where CSS is modular but optimized for performance. \\
+Few & [1, 2, 4, 5] & Represents balanced styling implementation. This range aligns with modern web development practices where CSS is modular but optimized for performance. \\
 \hline
-Normal & [3, 4, 8, 8] & Characteristic of properly developed sites with comprehensive styling needs. The upper limit reflects current best practices in CSS organization while acknowledging that excessive CSS files may indicate poor optimization. \\
+Normal & [4, 5, 20, 20] & Characteristic of properly developed sites with comprehensive styling needs. The upper limit reflects current best practices in CSS organization while acknowledging that excessive CSS files may indicate poor optimization. \\
 \hline
 \end{tabularx}
 \caption{Linguistic Terms for Number of External CSS Files}
 \label{tab:css_files}
 \end{table}
 
-\begin{figure}[H]
-\centering
 \begin{tikzpicture}
     % Axis
-    \draw[->] (0,0) -- (9,0) node[right] {Number of External CSS Files};
+    \draw[->] (0,0) -- (10,0) node[right] {Number of External CSS Files};
     \draw[->] (0,0) -- (0,3) node[above] {Membership Degree};
-
     % Very Few
     \draw[thick] (0,0) -- (0,2) -- (1,2) -- (2,0);
     \node at (1,2.2) {Very Few};
-
-    % Moderate
-    \draw[thick] (1,0) -- (2,2) -- (3,2) -- (4,0);
-    \node at (2.5,2.2) {Moderate};
-
+    % Few
+    \draw[thick] (1,0) -- (2,2) -- (4,2) -- (5,0);
+    \node at (3,2.2) {Few};
     % Normal
-    \draw[thick] (3,0) -- (4,2) -- (8,2) -- (8,0);
-    \node at (5.5,2.2) {Normal};
-
+    \draw[thick] (4,0) -- (5,2) -- (10,2) -- (10,0);
+    \node at (7.5,2.2) {Normal};
     % Labels
     \node[below] at (0,0) {0};
     \node[below] at (1,0) {1};
     \node[below] at (2,0) {2};
-    \node[below] at (3,0) {3};
     \node[below] at (4,0) {4};
-    \node[below] at (8,0) {8};
+    \node[below] at (5,0) {5};
+    \node[below] at (10,0) {20};
 \end{tikzpicture}
-\caption{Membership Functions for Number of External CSS Files}
-\label{fig:membership_css_files}
-\end{figure}
-    
+
 \subsubsection{Domain Registration Length}
 
 The variable f82 reflects the duration of domain registration in years. According to \cite{8036198}, domain registration length is a crucial temporal feature for phishing detection, as legitimate websites tend to be registered for longer periods while phishing domains are typically short-lived. As noted in \cite{10049452}, attackers often register domains for the minimum required period to minimize costs and avoid detection, making registration length a strong indicator of potentially malicious intent. This pattern emerges because phishing campaigns are typically brief, targeted operations that don't require long-term domain maintenance. The range spans from 1 to 10 years and is characterized by the following:
@@ -396,54 +381,65 @@ The rule base for the fuzzy expert system was developed using a systematic metho
 \subsection{Complete Rule Set}
 
 \begin{table}[H]
-\centering
-\footnotesize
-\setlength{\extrarowheight}{1pt}
-\rowcolors{2}{gray!10}{white}
-\begin{tabularx}{\textwidth}{|>{\centering\arraybackslash}p{0.03\textwidth}|%
->{\raggedright\arraybackslash}p{0.15\textwidth}|%
->{\raggedright\arraybackslash}p{0.10\textwidth}|%
->{\raggedright\arraybackslash}p{0.13\textwidth}|%
->{\raggedright\arraybackslash}p{0.10\textwidth}|%
->{\raggedright\arraybackslash}p{0.15\textwidth}|%
->{\raggedright\arraybackslash}p{0.12\textwidth}|}
-\hline
-\rowcolor{gray!30}
-\textbf{\#} & \textbf{Null Links} & \textbf{Ext. CSS} & \textbf{Domain Reg.} & \textbf{Traffic} & \textbf{Page Rank} & \textbf{Risk} \\ \hline
-\textbf{1}  & High & Very Few & Short & Very Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{2}  & High & Few & Short & Very Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{3}  & High & Very Few & Medium & Very Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{4}  & High & Few & Medium & Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{5}  & Moderate & Very Few & Short & Very Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{6}  & High & Normal & Short & Low & Not very known & \textbf{Phishing} \\ \hline
-\textbf{7}  & High & Normal & Medium & Low & Not very known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{8}  & High & Few & Long & Low & Not very known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{9}  & High & Very Few & Long & Moderate & Moderately known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{10} & Moderate & Few & Short & Low & Not very known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{11} & Moderate & Very Few & Medium & Low & Not very known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{12} & High & Normal & Long & Moderate & Moderately known & \textbf{Strongly Suspicious} \\ \hline
-\textbf{13} & Moderate & Few & Medium & Low & Moderately known & \textbf{Weakly Suspicious} \\ \hline
-\textbf{14} & Moderate & Normal & Medium & Moderate & Moderately known & \textbf{Weakly Suspicious} \\ \hline
-\textbf{15} & Moderate & Few & Long & Low & Moderately known & \textbf{Weakly Suspicious} \\ \hline
-\textbf{16} & Low & Very Few & Short & Moderate & Moderately known & \textbf{Weakly Suspicious} \\ \hline
-\textbf{17} & Low & Few & Medium & Low & Moderately known & \textbf{Weakly Suspicious} \\ \hline
-\textbf{18} & Moderate & Normal & Long & Low & Popular & \textbf{Weakly Suspicious} \\ \hline
-\textbf{19} & Low & Very Few & Long & Moderate & Popular & \textbf{Weakly Suspicious} \\ \hline
-\textbf{20} & Moderate & Few & Long & Moderate & Popular & \textbf{Weakly Suspicious} \\ \hline
-\textbf{21} & Low & Normal & Long & High & Popular & \textbf{Safe} \\ \hline
-\textbf{22} & Low & Few & Long & High & Popular & \textbf{Safe} \\ \hline
-\textbf{23} & Low & Normal & Medium & High & Popular & \textbf{Safe} \\ \hline
-\textbf{24} & Moderate & Normal & Long & High & Popular & \textbf{Safe} \\ \hline
-\textbf{25} & Low & Few & Medium & High & Popular & \textbf{Safe} \\ \hline
-\textbf{26} & Low & Normal & Long & Moderate & Popular & \textbf{Safe} \\ \hline
-\textbf{27} & Moderate & Normal & Long & Moderate & Popular & \textbf{Safe} \\ \hline
-\textbf{28} & Low & Few & Long & Moderate & Popular & \textbf{Safe} \\ \hline
-\textbf{29} & Low & Normal & Medium & Moderate & Popular & \textbf{Safe} \\ \hline
-\textbf{30} & Low & Few & Medium & Moderate & Popular & \textbf{Safe} \\ \hline
-\end{tabularx}
-\caption{Complete Rule Set for Phishing Detection}
-\label{tab:complete_rule_set}
-\end{table}
+    \centering
+    \footnotesize
+    \setlength{\extrarowheight}{1pt}
+    \rowcolors{2}{gray!10}{white}
+    \begin{tabularx}{\textwidth}{|>{\centering\arraybackslash}p{0.03\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.13\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.10\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.13\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.10\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.15\textwidth}|%
+    >{\centering\arraybackslash}p{0.08\textwidth}|%
+    >{\raggedright\arraybackslash}p{0.12\textwidth}|}
+    \hline
+    \rowcolor{gray!30}
+    \textbf{\#} & \textbf{Null Links} & \textbf{Ext. CSS} & \textbf{Domain Reg.} & \textbf{Traffic} & \textbf{Page Rank} & \textbf{Weight} & \textbf{Risk} \\ \hline
+    
+    \textbf{1} & High & * & * & * & * & 0.50 & \textbf{Phishing} \\ \hline
+    \textbf{2} & Moderate & Few & Short & Very Low & Not Very Known & 0.85 & \textbf{Phishing} \\ \hline
+    \textbf{3} & Moderate & Few & Short & Very Low & Moderately Known & 0.85 & \textbf{Phishing} \\ \hline
+    \textbf{4} & Moderate & Few & Medium & Very Low & Not Very Known & 0.80 & \textbf{Phishing} \\ \hline
+    \textbf{5} & Moderate & Few & Medium & Very Low & Moderately Known & 0.80 & \textbf{Phishing} \\ \hline
+    \textbf{6} & Moderate & Normal & Short & Very Low & Not Very Known & 0.75 & \textbf{Phishing} \\ \hline
+    \textbf{7} & Moderate & Normal & Short & Very Low & Moderately Known & 0.75 & \textbf{Phishing} \\ \hline
+    \textbf{8} & Moderate & Normal & Medium & Very Low & Not Very Known & 0.70 & \textbf{Phishing} \\ \hline
+    \textbf{9} & Moderate & Normal & Medium & Very Low & Moderately Known & 0.70 & \textbf{Phishing} \\ \hline
+    
+    \textbf{10} & * & Very Few & * & * & * & 0.50 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{11} & Moderate & Few & Short & Low & Not Very Known & 0.85 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{12} & Moderate & Few & Short & Low & Moderately Known & 0.85 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{13} & Moderate & Few & Medium & Low & Not Very Known & 0.80 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{14} & Moderate & Few & Medium & Low & Moderately Known & 0.80 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{15} & Moderate & Normal & Short & Low & Not Very Known & 0.75 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{16} & Moderate & Normal & Short & Low & Moderately Known & 0.75 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{17} & Moderate & Normal & Medium & Low & Not Very Known & 0.70 & \textbf{Strongly Suspicious} \\ \hline
+    \textbf{18} & Moderate & Normal & Medium & Low & Moderately Known & 0.70 & \textbf{Strongly Suspicious} \\ \hline
+    
+    \textbf{19} & Moderate & Few & Short & Moderate & Not Very Known & 0.85 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{20} & Moderate & Few & Short & Moderate & Moderately Known & 0.85 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{21} & Moderate & Few & Medium & Moderate & Not Very Known & 0.80 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{22} & Moderate & Few & Medium & Moderate & Moderately Known & 0.80 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{23} & Moderate & Normal & Short & Moderate & Not Very Known & 0.75 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{24} & Moderate & Normal & Short & Moderate & Moderately Known & 0.75 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{25} & Moderate & Normal & Medium & Moderate & Not Very Known & 0.70 & \textbf{Weakly Suspicious} \\ \hline
+    \textbf{26} & Moderate & Normal & Medium & Moderate & Moderately Known & 0.70 & \textbf{Weakly Suspicious} \\ \hline
+    
+    \textbf{27} & * & Few & * & High & * & 0.50 & \textbf{Safe} \\ \hline
+    \textbf{28} & Low & * & * & * & * & 0.50 & \textbf{Safe} \\ \hline
+    \textbf{29} & * & * & Long & * & * & 0.50 & \textbf{Safe} \\ \hline
+    \textbf{30} & * & * & * & * & Popular & 0.50 & \textbf{Safe} \\ \hline
+    \textbf{31} & Moderate & Normal & Short & High & Not Very Known & 0.85 & \textbf{Safe} \\ \hline
+    \textbf{32} & Moderate & Normal & Short & High & Moderately Known & 0.85 & \textbf{Safe} \\ \hline
+    \textbf{33} & Moderate & Normal & Medium & High & Not Very Known & 0.80 & \textbf{Safe} \\ \hline
+    \textbf{34} & Moderate & Normal & Medium & High & Moderately Known & 0.80 & \textbf{Safe} \\ \hline
+    \textbf{35} & * & Few & * & High & * & 0.50 & \textbf{Safe} \\ \hline
+    
+    \end{tabularx}
+    \caption{Complete Rule Set for Phishing Detection with Weights}
+    \label{tab:complete_rule_set}
+\end{table} 
 
 \subsection{Rule Set Design Rationale}
 
