--- a/report/references.bib
+++ b/report/references.bib
@@ -22,7 +22,7 @@
 
 @article{8036198,
   author   = {Dou, Zuochao and Khalil, Issa and Khreishah, Abdallah and Al-Fuqaha, Ala and Guizani, Mohsen},
-  journal  = {IEEE Communications Surveys & Tutorials},
+  journal  = {IEEE Communications Surveys \& Tutorials},
   title    = {Systematization of Knowledge (SoK): A Systematic Review of Software-Based Web Phishing Detection},
   year     = {2017},
   volume   = {19},
@@ -34,7 +34,7 @@
 
 @article{XIAO2021102372,
   title    = {Phishing websites detection via CNN and multi-head self-attention on imbalanced datasets},
-  journal  = {Computers & Security},
+  journal  = {Computers \& Security},
   volume   = {108},
   pages    = {102372},
   year     = {2021},
